--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
         <title>Landing Page</title>
     </head>
     <body>
-
+        <div class="first-section">
+            <div class="header">
+                <div class="header-left">
+                    <h2 class="logo">Header Logo</h2>
+                </div>
+                <div class="header-right">
+                    <ul>
+                        <li class="header-link">header link one</li>
+                        <li class="header-link">header link two</li>
+                        <li class="header-link">header link three</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
     
