--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
                     </ul>
                 </div>
             </div>
+            <div class="content">
+                <div class="content-left">
+                    <h1>This Website is </br>awesome</h1>
+                    <div class="sub-text">This website has some subtext that goes here under the</br> main title. It's a smaller font and the color is lower</br> contrast</div>
+                    <button class="button">Sign up</button>
+                </div>
+                <div class="content-right">
+                    <img src="GSD_Puppy.png" alt="A German Shepherd Puppy">
+                </div>           
+            </div>
+        </div>
+        <div class="second-section">
+            <h2>Some random information.</h2>
+            <div class="boxes">
+                <div class="box-text">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
