Add Pictures for .logo and .info

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="first-section">
             <div class="header">
                 <div class="header-left">
-                    <h2 class="logo">Header Logo</h2>
+                    <img class="logo" src="GSD_Logo.png" alt="German Shepherd">
                 </div>
                 <div class="header-right">
                     <ul>
@@ -21,23 +21,29 @@
             </div>
             <div class="content">
                 <div class="content-left">
-                    <h1>This Website is </br>awesome</h1>
-                    <div class="sub-text">This website has some subtext that goes here under the</br> main title. It's a smaller font and the color is lower</br> contrast</div>
+                    <h1>German Shepherds are awesome!</h1>
+                    <div class="sub-text">They are my favorite breed of dog.</div>
                     <button class="button">Sign up</button>
                 </div>
                 <div class="content-right">
-                    <img src="GSD_Puppy.png" alt="A German Shepherd Puppy">
+                    <img src="GSD_Puppy.png" alt="German Shepherd Puppy">
                 </div>           
             </div>
         </div>
         <div class="second-section">
             <h2>Some random information.</h2>
-            <div class="boxes">
-                <div class="box-text">
-                    <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="text">this is some subtext under an illustration or image</div>
-                    <div class="text">this is some subtext under an illustration or image</div>
+            <div class="info">
+                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                <div class="text"> They are beautiful</div>
+                </div>
+                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                <div class="text"> They are smart</div>
+                </div>
+                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                <div class="text"> They are loyal</div>
+                </div>
+                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                <div class="text"> They are loving</div>
                 </div>
             </div>
         </div>
