Aligned .second-section

--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
         <div class="second-section">
             <h2>Some random information.</h2>
             <div class="info">
-                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
-                <div class="text"> They are beautiful</div>
+                <div class="box_1">
+                    <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                    <div class="text"> They are beautiful</div>
                 </div>
-                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
-                <div class="text"> They are smart</div>
+                <div class="box_2">
+                    <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                    <div class="text"> They are loyal</div>
                 </div>
-                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
-                <div class="text"> They are loyal</div>
+                <div class="box_3">
+                    <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                    <div class="text"> They are smart</div>
                 </div>
-                <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
-                <div class="text"> They are loving</div>
+                <div class="box_4">
+                    <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
+                    <div class="text"> They are protective</div>
                 </div>
             </div>
         </div>
