--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                 </div>
             </div>
         </div>
+        <div class="third-section">
+            <div class="inspire">
+                <div class="quote">
+                    ROOF ROOOOOOOOF ROOF ROOF
+                </div>
+                <div class="author">
+                    -Thor, My German Shepherd
+                </div>
+            </div>
+        </div>
     </body>
 </html>
     
