--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                 </div>
             </div>
         </div>
+        <div class="fourth-section">
+            <div class="action">
+                <div class="call">Call to action! It's time!</div>
+                <div class="click-there">Sign up  for our product by clicking that button right over there!</div>
+            </div>
+            <button class="Sign_Up">Sign up</button>
+        </div>
     </body>
 </html>
     
