Finish .fourth-section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="content-left">
                     <h1>German Shepherds are awesome!</h1>
                     <div class="sub-text">They are my favorite breed of dog.</div>
-                    <button class="button">Sign up</button>
+                    <button class="button_1">Sign up</button>
                 </div>
                 <div class="content-right">
                     <img src="GSD_Puppy.png" alt="German Shepherd Puppy">
@@ -63,10 +63,14 @@
         </div>
         <div class="fourth-section">
             <div class="action">
-                <div class="call">Call to action! It's time!</div>
-                <div class="click-there">Sign up  for our product by clicking that button right over there!</div>
+                <div class="left-action">
+                    <div class="call">Call to action! It's time!</div>
+                    <div class="click-there">Sign up  for our product by clicking that button right over there!</div>
+                </div>
+                <div class="right-action">
+                    <button class="button_2">Sign up</button>
+                </div>
             </div>
-            <button class="Sign_Up">Sign up</button>
         </div>
     </body>
 </html>
