--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="second-section">
-            <h2>Some random information.</h2>
+            <h2>Why they are my favorite.</h2>
             <div class="info">
                 <div class="box_1">
                     <img class="picture" src="GSD_Face.jpeg" alt="German Shepherd Picture">
@@ -71,6 +71,9 @@
                     <button class="button_2">Sign up</button>
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            Copyright C The Odin Project 2023
         </div>
     </body>
 </html>
